--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -71,7 +71,10 @@ jobs:
             dist/github-snake-dark.svg?palette=github-dark
 
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
+            
+       - name: Push to GitHub
+          run: |
+            git push origin output
         env:
 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
