--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,15 +1,15 @@
-  name: GitHub Snake Game
+name: GitHub Snake Game
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Daily execution  at the midnight
-  workflow_dispatch:  # Executed manually the workflow
+    - cron: "0 0 * * *"  # Exécution quotidienne à minuit UTC
+  workflow_dispatch:  # Permet d'exécuter manuellement le workflow
   push:
     branches:
-      - main  # Execution on push to main branch
+      - main  # Exécution sur push vers la branche main
 
 permissions:
-  contents: write  # Permission to GitHub Actions to write
+  contents: write  # Permet à GitHub Actions d'écrire sur le dépôt
 
 jobs:
   generate:
@@ -46,4 +46,3 @@ jobs:
           publish_dir: ./dist
           publish_branch: output
           commit_message: "Update snake animation [skip ci]"
-
